@startuml

' Layout
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam shadowing false
skinparam DefaultFontName arial
skinparam DefaultFontSize 12
skinparam ClassFontStyle bold
hide empty fields

' Assoziationen
User "0..*" -- "0..*" Topic : > abonniert
User "1" -- "0..*" Topic : > erstellt
User "1" -- "0..*" Status : > besitzt
Topic "1" -- "0..*" Task : < gehört zu
Status "0..*" -- "1" Task : > bezieht sich

' Klassen
class Status [[java:edu.hm.cs.katz.swt2.agenda.persistence.Status]] {
	-Long id
	-User user
	-Task task
	-StatusEnum status
	-String comment
	-String rating
	+Long getId()
	+User getUser()
	+StatusEnum getStatus()
	+void setStatus(StatusEnum status)
	+Task getTask()
	+String getComment()
	+void setComment(String comment)
	+String getRating()
	+void setRating(String rating)
}

class Task [[java:edu.hm.cs.katz.swt2.agenda.persistence.Task]] {
	-Long id
	-String title
	-String shortDescription
	-String longDescription
	-Topic topic
	-Date deadline
	-Collection<Status> statuses
	+Long getId()
	+String getTitle()
	+String getShortDescription()
	+String getLongDescription()
	+Topic getTopic()
	+void setShortDescription(String shortDescription)
	+void setLongDescription(String longDescription)
	+Collection<Status> getStatuses()
	+Date getDeadline()
	+void setDeadline(Date deadline)
}

class User [[java:edu.hm.cs.katz.swt2.agenda.persistence.User]] {
	-String login
	-String name
	-String password
	-boolean administrator
	-Collection<Topic> subscriptions
	-Collection<Status> statuses
	+void addSubscription(Topic topic)
	+String getLogin()
	+String getName()
	+String getPassword()
	+boolean isAdministrator()
	+Collection<Topic> getSubscriptions()
	+Collection<Status> getStatuses()
}

class Topic [[java:edu.hm.cs.katz.swt2.agenda.persistence.Topic]] {
	-String uuid
	-String title
	-VisibilityEnum visibility
	-String shortDescription
	-String longDescription
	-User creator
	-Collection<Task> tasks
	-Collection<User> subscribers
	+String getUuid()
	+String getTitle()
	+VisibilityEnum getVisibility()
	+String getShortDescription()
	+String getLongDescription()
	+User getCreator()
	+Collection<Task> getTasks()
	+void addTask(Task t)
	+void register(User anwender)
	+Collection<User> getSubscribers()
	+void setShortDescription(String shortDescription)
	+void setLongDescription(String longDescription)
}

enum StatusEnum [[java:edu.hm.cs.katz.swt2.agenda.common.StatusEnum]] {
 	NEU
 	OFFEN
 	FERTIG
 	ABGELAUFEN
 	+String getDisplayValue()
 }

enum VisibilityEnum [[java:edu.hm.cs.katz.swt2.agenda.common.VisibilityEnum]] {
    PRIVATE
    PUBLIC
    +String getDisplayValue()
 }

@enduml
